--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "space-insertion",
+	"name": "空格插入",
 	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"minAppVersion": "0.12.0",
+	"description": "自动在中文字符与英文或数字之间插入空格，提升文本可读性和视觉体验。",
+	"author": "Evans_lx",
+	"authorUrl": "https://github.com/Evans-lx",
 	"isDesktopOnly": false
-}
+  }
+  
